--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -7,4 +7,5 @@ spec:
   template:
     spec:
       containers:
-      - name: manager
+        - image: ghcr.io/furkatgofurov7/turtles-etcd-restore:dev
+          name: manager
