--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,19 +5,24 @@ resources:
 - bases/turtles-capi.cattle.io_etcdbackups.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
-patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- path: patches/webhook_in_etcdbackups.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- path: patches/cainjection_in_etcdbackups.yaml
+patches:
+# - path: patches/webhook_in_etcdbackups.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: etcdbackups.turtles-capi.cattle.io
+  path: patches/turtles-capi.cattle.io_etcdbackups.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 
-#configurations:
-#- kustomizeconfig.yaml
+configurations:
+- kustomizeconfig.yaml
