Add Tilt support
Signed-off-by: Furkat Gofurov <furkat.gofurov@suse.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -36,10 +36,14 @@ spec:
         - containerPort: 9440
           name: healthz
           protocol: TCP
-        readinessProbe:
-          httpGet:
-            path: /readyz
-            port: healthz
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - "ALL"
+          privileged: false
+          runAsUser: 65532
+          runAsGroup: 65532
         livenessProbe:
           httpGet:
             path: /healthz
