--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -28,7 +28,10 @@ resources:
 patches:
 - path: manager_image_patch.yaml
 - path: manager_pull_policy.yaml
-- path: manager_role_aggregation_patch.yaml
+# - path: manager_role_aggregation_patch.yaml
+
+patchesStrategicMerge:
+- manager_role_aggregation_patch.yaml
 
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
