--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -46,6 +46,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machines
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - management.cattle.io
   resources:
   - '*'
