--- a/examples/rke2-aws-cluster.yaml
+++ b/examples/rke2-aws-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: example-aws
+  name: ${CLUSTER_NAMESPACE}
   labels:
     cluster-api.cattle.io/rancher-auto-import: "true"
 ---
@@ -9,7 +9,7 @@ apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
-  namespace: example-aws
+  namespace: ${CLUSTER_NAMESPACE}
 spec:
   clusterNetwork:
     pods:
@@ -28,7 +28,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
 kind: AWSCluster
 metadata:
   name: ${CLUSTER_NAME}
-  namespace: example-aws
+  namespace: ${CLUSTER_NAMESPACE}
 spec:
   bastion:
     enabled: true
@@ -63,7 +63,7 @@ apiVersion: controlplane.cluster.x-k8s.io/v1alpha1
 kind: RKE2ControlPlane
 metadata:
   name: ${CLUSTER_NAME}-control-plane
-  namespace: example-aws
+  namespace: ${CLUSTER_NAMESPACE}
 spec:
   preRKE2Commands:
   - sudo hostnamectl set-hostname $(curl -s http://169.254.169.254/1.0/meta-data/hostname)
@@ -87,7 +87,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
 kind: AWSMachineTemplate
 metadata:
   name: ${CLUSTER_NAME}-control-plane
-  namespace: example-aws
+  namespace: ${CLUSTER_NAMESPACE}
 spec:
   template:
     spec:
@@ -102,9 +102,9 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
 kind: AWSClusterControllerIdentity
 metadata:
   name: default
-  namespace: example-aws
+  namespace: ${CLUSTER_NAMESPACE}
 spec:
   allowedNamespaces:
     list:
     - default
-    - example-aws
+    - ${CLUSTER_NAMESPACE}
